--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </div>
     <div class="navbar-celeste">
         <ul class="menu">
-            <li>Menú</li>
-            <li>Desarrollo</li>
-            <li>Unpaz</li>
-            <li>Campus Virtual</li>
+            <li>Inicio</li>
+            <li>Biografia</li>
+            <li>Frases celebres</li>
+            <li>Galeria</li>
         </ul>
     </div>
     <div class="container">
