--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     </div>
     <div class="container">
        <div class="sidebar">
-        <p>Nombre: [añadir aquí]</p>
-        <p>Apellido: [añadir aquí]</p>
-        <p>Teléfono: [añadir aquí]</p>
-        <p>Provincia: [añadir aquí]</p>
-        <p>Carrera: [añadir aquí]</p>
-        <p>LinkedIn: <a href="[enlace_a_tu_perfil]" target="_blank">Usuario</a></p>
+        <p>Nombre: [Nedward]</p>
+        <p>Apellido: [Flanders Jr]</p>
+        <p>Teléfono: [1135695118]</p>
+        <p>Provincia: [Springfield]</p>
+        <p>Carrera: [Farmaceutico]</p>
+        <p>Fandom web: <a href="https://simpsons.fandom.com/wiki/Ned_Flanders" target="_blank">Usuario</a></p>
 </div>
         <div class="main-content">
             <img src="imges/michi.jpg" alt="foto que le saque a mi michi">
