Cambie la descripción de la página

--- a/index.html
+++ b/index.html
@@ -35,18 +35,8 @@
         </div>
         <div>
             <div class="text-content">
-                <p>Esto es una página básica para mostrar los fundamentos de HTML y CSS. El sitio web incluye una
-                    estructura simple con un encabezado, contenido principal, una sección de información personal, como punto de partida 
-                    para realizar personalizaciones y añadir nuevas funcionalidadesEl objetivo de este proyecto es proporcionar a los estudiantes una base para entender la estructura
-                    básica y familiarizarse con la organización del contenido en bloques y el uso de hojas de estilo para definir 
-                    la apariencia visual de cada elemento. Al trabajar sobre un ejemplo concreto, se facilita la comprensión de conceptos como 
-                    el modelo de caja, la jerarquía de elementos y la separación entre estructura y diseño..</p>
-                <p>El objetivo de este proyecto es proporcionar a los estudiantes una base para entender la estructura
-                    básica y familiarizarse con la organización del contenido en bloques y el uso de hojas de estilo para definir 
-                    la apariencia visual de cada elemento.
-                    El objetivo de este proyecto es proporcionar a los estudiantes una base para entender la estructura
-                    básica y familiarizarse con la organización del contenido en bloques y el uso de hojas de estilo para definir 
-                    la apariencia visual de cada elemento.</p>
+                <p>Ned Flanders es uno de los personajes más emblemáticos de la serie animada Los Simpson. Es el vecino amable, devoto y excesivamente optimista de la familia Simpson, conocido por su fe cristiana inquebrantable, su carácter servicial y su tendencia a hablar con expresiones como “¡Hola, vecinillo!”. Siempre dispuesto a ayudar, Ned representa el estereotipo del creyente piadoso y moralmente intachable, lo que a menudo contrasta con la actitud más cínica y despreocupada de Homero. Su aspecto se ha vuelto un ícono cultural, simbolizando tanto la bondad como la ingenuidad.</p>
+                <p>A lo largo de la serie, se revela que Flanders no solo es un hombre extremadamente religioso, sino también un empresario exitoso, dueño de la tienda “Zurditorium”, especializada en productos para zurdos. Su constante paciencia y bondad sirven como contrapunto moral en Springfield, haciendo de él una figura tanto cómica como entrañable dentro del universo de Los Simpson.</p>
             </div>
          </div>
         <div class="footer">
