--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Desarrollo Web 2025</title>
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="imges/neddesarrollo.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="navbar-blanco">
-        <img src="imges/logo-desarolloWeb.png" alt="Logo de la Universidad" class="logo">
+        <img src="imges/neddesarrollo.png" alt="Logo de la Universidad" class="logo">
         <img src="imges/unpaz_logo.png" alt="Logo de Unpaz" class="logo-unpaz">
     </div>
     <div class="navbar-celeste">
