--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>LinkedIn: <a href="[enlace_a_tu_perfil]" target="_blank">Usuario</a></p>
 </div>
         <div class="main-content">
-            <img src="imges/michi.jpg" alt="foto que le saque a mi michi">
+            <img src="imges/ned.jpg" alt="ned flanders gritando">
         </div>
         <div>
             <div class="text-content">
